--- a/data/tickerNotebook.ipynb
+++ b/data/tickerNotebook.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line 2: t0rj6748v6ptb8skvpg\n",
-      "1598382832307.1401\n",
+      "1598413169843.291\n",
       "Index(['High', 'Low', 'Open', 'Close', 'Volume', 'Adj Close'], dtype='object')\n"
      ]
     }
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -221,16 +220,16 @@
        "      <td>1927.520020</td>\n",
        "      <td>2126.280029</td>\n",
        "      <td>2014.199951</td>\n",
-       "      <td>20017000</td>\n",
+       "      <td>20063600</td>\n",
        "      <td>2014.199951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-08-25</th>\n",
        "      <td>2027.949951</td>\n",
-       "      <td>1968.160034</td>\n",
+       "      <td>1968.000000</td>\n",
        "      <td>1974.890015</td>\n",
        "      <td>2023.339966</td>\n",
-       "      <td>10495731</td>\n",
+       "      <td>10584300</td>\n",
        "      <td>2023.339966</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -250,8 +249,8 @@
        "2020-08-19  1911.000000  1841.209961  1865.000000  1878.530029  12205300   \n",
        "2020-08-20  2021.989990  1857.060059  1860.680054  2001.829956  20611800   \n",
        "2020-08-21  2095.489990  2025.050049  2044.760010  2049.979980  21489600   \n",
-       "2020-08-24  2129.000000  1927.520020  2126.280029  2014.199951  20017000   \n",
-       "2020-08-25  2027.949951  1968.160034  1974.890015  2023.339966  10495731   \n",
+       "2020-08-24  2129.000000  1927.520020  2126.280029  2014.199951  20063600   \n",
+       "2020-08-25  2027.949951  1968.000000  1974.890015  2023.339966  10584300   \n",
        "\n",
        "              Adj Close  \n",
        "Date                     \n",
@@ -270,7 +269,7 @@
        "[667 rows x 6 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,16 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe9b748e150>]"
+       "[<matplotlib.lines.Line2D at 0x7fe9bb10d750>]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,16 +321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe9b801f910>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe9bb488350>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -353,16 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe9b801f550>"
+       "<matplotlib.legend.Legend at 0x7fe9ba253c10>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -388,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -459,17 +458,17 @@
        "      <td>1927.520020</td>\n",
        "      <td>2126.280029</td>\n",
        "      <td>2014.199951</td>\n",
-       "      <td>20017000</td>\n",
+       "      <td>20063600</td>\n",
        "      <td>2014.199951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>666</th>\n",
        "      <td>737662.0</td>\n",
        "      <td>2027.949951</td>\n",
-       "      <td>1968.160034</td>\n",
+       "      <td>1968.000000</td>\n",
        "      <td>1974.890015</td>\n",
        "      <td>2023.339966</td>\n",
-       "      <td>10495731</td>\n",
+       "      <td>10584300</td>\n",
        "      <td>2023.339966</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -481,8 +480,8 @@
        "662  737656.0  1911.000000  1841.209961  1865.000000  1878.530029  12205300   \n",
        "663  737657.0  2021.989990  1857.060059  1860.680054  2001.829956  20611800   \n",
        "664  737658.0  2095.489990  2025.050049  2044.760010  2049.979980  21489600   \n",
-       "665  737661.0  2129.000000  1927.520020  2126.280029  2014.199951  20017000   \n",
-       "666  737662.0  2027.949951  1968.160034  1974.890015  2023.339966  10495731   \n",
+       "665  737661.0  2129.000000  1927.520020  2126.280029  2014.199951  20063600   \n",
+       "666  737662.0  2027.949951  1968.000000  1974.890015  2023.339966  10584300   \n",
        "\n",
        "       Adj Close  \n",
        "662  1878.530029  \n",
@@ -492,7 +491,7 @@
        "666  2023.339966  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -616,6 +615,41 @@
     "plt.plot(org_dates, svrTicker.predict(dates), color= 'red', label= 'RBF model') \n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Price')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'n' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-c2bc5fe5cc18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m50\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'n' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# x_train , y_train, x_test , y_train = train_test_split(date,y)\n",
+    "# y_pred = svrTickerRBF.predict()\n",
+    "np.random.seed(210)\n",
+    "n = 1000000000    \n",
+    "def genData(x):    \n",
+    "    r = [a/10 for a in x]\n",
+    "    y = np.sin(x)+np.random.uniform(-.1, .2, len(x))\n",
+    "    return np.array(y+r)\n",
+    "\n",
+    "x = [i/50 for i in range(n)]\n",
+    "y = genData(x)\n",
+    "x = np.array(x).reshape(-1,1)\n",
+    "\n",
+    "plt.scatter(x, y, s=3, color=\"green\")\n",
     "plt.show()"
    ]
   },
