[test] ticker names

--- a/data/tickerNotebook.ipynb
+++ b/data/tickerNotebook.ipynb
@@ -36,7 +36,7 @@
     "# start = datetime.datetime(2020,3,11)\n",
     "# end = datetime.datetime(2020,8,1)\n",
     "# end = datetime.date.today()\n",
-    "df = reader.DataReader(\"TSLA\", 'yahoo', start, end)\n",
+    "df = reader.DataReader(\"EBAY\", 'yahoo', start, end)\n",
     "# sort by date\n",
     "df = df.sort_values('Date')\n",
     "df = df.sort_values('Date')\n",
