--- a/data/tickerNotebook.ipynb
+++ b/data/tickerNotebook.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1598569464438.463\n",
-      "Index(['High', 'Low', 'Open', 'Close', 'Volume', 'Adj Close'], dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras\n",
     "import numpy as np \n",
@@ -30,21 +21,15 @@
     "from matplotlib import style\n",
     "\n",
     "\n",
-    "style.use('ggplot')\n",
-    "start = datetime.datetime(2018,1,1)\n",
-    "end = datetime.datetime.today()\n",
-    "# start = datetime.datetime(2020,3,11)\n",
-    "# end = datetime.datetime(2020,8,1)\n",
-    "# end = datetime.date.today()\n",
-    "df = reader.DataReader(\"OKTA\", 'yahoo', start, end)\n",
-    "# sort by date\n",
-    "df = df.sort_values('Date')\n",
-    "\n",
-    "# fix the date \n",
-    "df.reset_index(inplace=True)\n",
-    "df.set_index(\"Date\", inplace=True)\n",
-    "df.reset_index(inplace=True)\n",
-    "df.set_index(\"Date\", inplace=True)\n",
+    "def create(symbol,start,end):\n",
+    "    style.use('ggplot')\n",
+    "    df = reader.DataReader(symbol, 'yahoo', start, end)\n",
+    "    # sort by date\n",
+    "    df = df.sort_values('Date')\n",
+    "    # fix the date \n",
+    "    df.reset_index(inplace=True)\n",
+    "    df.set_index(\"Date\", inplace=True)\n",
+    "    return (df,start-end)\n",
     "\n",
     "def accessGrant():\n",
     "    stripped = \"\"\n",
@@ -70,14 +55,17 @@
     "    return(value,timenow)\n",
     "\n",
     "def genWebHook():\n",
-    "    r = requests.post('https://finnhub.io/api/v1/webhook/add?token=', stripped , json={'event': 'earnings', 'symbol': 'TSLA'})\n",
+    "    r = requests.post('https://finnhub.io/api/v1/webhook/add?token=', stripped , json={'event': 'earnings', 'symbol': 'AAPL'})\n",
     "    res = r.json() # limit 30/sec base\n",
     "    print(res)\n",
     "\n",
     "def main():\n",
     "    utc , _ = unixTimeStamp()\n",
     "    print(utc)\n",
-    "    print(df.columns)\n",
+    "    start = datetime.datetime(2019,5,8)\n",
+    "    end = datetime.datetime.today()\n",
+    "    df,timeFrame = create(\"AAPL\",start,end)\n",
+    "    print(df)\n",
     "    # genWebHook()\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n",
@@ -739,9 +727,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37764bit7a2289a4586a478498f2e63e32093d3d"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -753,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
