[test] ipynbook changes

--- a/data/tickerNotebook.ipynb
+++ b/data/tickerNotebook.ipynb
@@ -235,17 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "def visualizeYfinanceHistoricalData(symbol):\n",
+    "    ticker = yf.Ticker(symbol)\n",
+    "    data = ticker.history(start=\"2010-01-01\",  end=\"2020-07-21\")\n",
+    "    fig = plotit.Figure(data=[plotit.Candlestick(x=data['Date'],high=data['High'],low=data['Low'],close=data['Close'])])  \n",
+    "    fig.show() "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "visualizeYfinanceHistoricalData(\"F\")"
+   ]
   },
   {
    "cell_type": "code",
