[update]  lorenz equation standards

--- a/data/notebooks/testLorenzAttractorBase.ipynb
+++ b/data/notebooks/testLorenzAttractorBase.ipynb
@@ -17,10 +17,10 @@
     "# refer \"https://mathworld.wolfram.com/LorenzAttractor.html\" for complete formulaic breakdown\n",
     "def lorenzAttractorGenerator(x,y,z):\n",
     "    # This method of fluid movement, essentially assumes that the fluid is cooled from below and heated from above\n",
-    "    xBar = prandtl_number * (y-x)\n",
-    "    yBar = rayleigh_number * x - y - x*y\n",
-    "    zBar = x * y - beta * z\n",
-    "    return xBar, yBar, zBar"
+    "    xNot= prandtl_number * (y-x)\n",
+    "    yNot = rayleigh_number * x - y - x*y\n",
+    "    zNot = x * y - beta * z\n",
+    "    return xNot, yNot, zNot"
    ]
   },
   {
@@ -50,10 +50,10 @@
     "    zArr = np.empty(steps + 1)\n",
     "    xArr[0], yArr[0], zArr[0] = (0., 1., 1.05)\n",
     "    for i in range(steps):\n",
-    "        xBar, yBar, zBar = lorenzAttractorGenerator(xArr[i], yArr[i], zArr[i])\n",
-    "        xArr[i + 1] = xArr[i] + (xBar * dt)\n",
-    "        yArr[i + 1] = yArr[i] + (yBar * dt)\n",
-    "        zArr[i + 1] = zArr[i] + (zBar * dt)\n",
+    "        xNot, yNot, zNot = lorenzAttractorGenerator(xArr[i], yArr[i], zArr[i])\n",
+    "        xArr[i + 1] = xArr[i] + (xNot * dt)\n",
+    "        yArr[i + 1] = yArr[i] + (yNot * dt)\n",
+    "        zArr[i + 1] = zArr[i] + (zNot * dt)\n",
     "    \n",
     "    fig = plt.figure()\n",
     "    ax = fig.gca(projection='3d')\n",
@@ -106,9 +106,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664bitbaseconda3baf6e67b2e4421f8209f205d7ab9dfb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -120,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
